# distira

./: .env.example  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTING.md  VERSION
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: distira.agent.md
.github/workflows/: sync-version-badge.yml
adapters/src/: lib.rs
brand/: brand_guide.md
cache/: client-context.json  mcp-meta-probe.json  runtime-state.json
compiler/src/: lib.rs  optimizer.rs  rctia.rs
configs/policies/: policies.yaml
configs/providers/: providers.yaml
configs/routing/: routing.yaml
configs/workspace/: workspace.yaml
core/: Cargo.toml
core/src/: main.rs
dashboard/ui-vue/: index.html  package-lock.json  package.json
dashboard/ui-vue/src/: App.vue
dashboard/ui-vue/src/components/: AreaChart.vue  EfficiencyGauge.vue  FlowVisualizer.vue  (+3 more)
deployments/docker/: Dockerfile
deployments/helm/: Chart.yaml
deployments/kubernetes/: deployment.yaml  service.yaml
docs/: ai-flow-visualizer.md  api-reference.md  architecture.md  branding.md  context-budget-compiler.md  context-memory-lensing.md
examples/basic-openai-client/: README.md
examples/ollama-local-routing/: README.md
mcp/: distira-server.mjs  package-lock.json  package.json  test-mcp.mjs
memory/src/: lib.rs
router/src/: lib.rs
scripts/: bootstrap-win.ps1  bootstrap.sh  resolve-upstream-context.ps1  start-win.ps1  start.sh  test-api.ps1
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
(+11 files in other folders)
